# GtkmmSpriteEd3

./: CMakeLists.txt  Compile_resources.txt  Default.pal  Makefile  README.md  RHandle.cpp  RHandle.h  RPoint.cpp  RPoint.h  RRect.cpp  RRect.h  editArea.cpp  editArea.h  editMode.cpp  editMode.h  editModeEllipse.cpp  editModeEllipse.h  editModeFill.cpp  editModeFill.h  editModePencil.cpp  editModePencil.h  editModeRect.cpp  editModeRect.h  editModeSelect.cpp  editModeSelect.h  main.cpp  myApplication.cpp  myApplication.h  myapp.gresource.xml  palette.cpp  palette.h  resources.cpp  spriteArea.cpp  spriteArea.h
.cache/clangd/index/: RHandle.cpp.9517F5720C216916.idx  RHandle.h.F0DA8736024A8D5A.idx  RPoint.cpp.91F4400E067B1489.idx  RPoint.h.81F9232F4326D0F5.idx  RRect.cpp.C20CC8311A3DB6FA.idx  RRect.h.39CBFEAC3AACBC56.idx  editArea.cpp.FEFD158777FDE98B.idx  editArea.h.75E511FCF4528C7E.idx  editMode.cpp.3ED22C48348F4541.idx  editMode.h.518A175D6FE0F27D.idx  editModeEllipse.cpp.E8A06293F8117787.idx  editModeEllipse.h.2C2C3F098FA58763.idx  editModeFill.cpp.3B72E24D93607591.idx  editModeFill.h.AE2E8CDE39E23579.idx  editModePencil.cpp.55F4B28CA1EA6C81.idx  editModePencil.h.3A6A9976E6890D1D.idx  editModeRect.cpp.4561A5CEE160C624.idx  editModeRect.h.D3BE013BC5F424D5.idx  editModeSelect.cpp.05201CFEE8ACB0D7.idx  editModeSelect.h.1D701A251A59BD92.idx  main.cpp.A5CC3863B296575D.idx  myApplication.cpp.1F11D6658BBD8E12.idx  myApplication.h.962959EBCCCEDE2D.idx  palette.cpp.665FF70C18DA2A2F.idx  palette.h.E2D2B434A059AEF5.idx  (+3 more)
res/: gtkspriteed.glade  gtkspriteed.glade~
